src/plugins/platforms/windows/qwindowsscreen.h
@@ -105,6 +105,7 @@ public:
 
     QWindowsScreenManager();
     void initialize();
+    void destroyWindow();
     ~QWindowsScreenManager();
 
     void clearScreens();
